# profile.mobile.apps.native.myfiles

./: .cproject  .project  CMakeLists.txt  check_list_for_public.txt  feature_rm.py  org.tizen.myfile-1.0.0-arm-debug.tpk  org.tizen.myfile-1.0.0-arm.tpk  org.tizen.myfile-1.0.0-arm_debug.tpk  org.tizen.myfile-1.0.0-i386-debug.tpk  org.tizen.myfile-1.0.0-i386.tpk  org.tizen.myfile-1.0.0-i386_debug.tpk  org.tizen.myfile.efl  org.tizen.myfile.manifest  org.tizen.myfile.xml  project_def.prop  tizen-manifest.xml
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
data/: CMakeLists.txt  edc_common.h  edc_image_macro.edc  myfile-ctxpopup.edc  myfile-expand-title.edc  myfile-fake-effect.edc  myfile-toolbar.edc  myfile.edc  myfile_category.edc  myfile_gengrid.edc  myfile_genlist.edc
data/po/: CMakeLists.txt  bn.po  de.po  en_US.po  fi.po  gu.po  hi.po  hu.po  hy.po  is.po  ja_JP.po  ka.po  kk.po  kn.po  mk.po  ml.po  nb.po  nl.po  or.po  pl.po  pt_PT.po  ru_RU.po  sv.po  ta.po  te.po  tr_TR.po
inc/: mf-callback.h  mf-cancel.h  mf-conf.h  mf-context-popup.h  mf-copy-internal.h  mf-copy.h  mf-delete-internal.h  mf-delete.h  mf-dlog.h  mf-download-app.h  mf-download-apps-view.h  mf-edit-view.h  mf-error.h  mf-file-util.h  mf-fm-svc-wrapper.h  mf-fo-common.h  mf-fo-debug.h  mf-fo-internal.h  mf-focus-ui.h  mf-fs-monitor.h  mf-fs-util.h  mf-gengrid.h  mf-genlist.h  mf-inotify-handle.h  mf-launch.h  mf-log.h  mf-main.h  mf-media-content.h  mf-media-data.h  mf-media-db.h  mf-media-error.h  mf-media-types.h  mf-media.h  mf-move-internal.h  mf-move.h  mf-navi-bar.h  mf-object-conf.h  mf-object-item.h  mf-object.h  mf-popup.h  (+20 more)
packaging/: org.tizen.myfile.spec
res/edje/: CMakeLists.txt  edc_common.h  edc_image_macro.edc  myfile.edc  myfile_category.edc  myfile_genlist.edc
res/po/: POTFILES.in  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  (+42 more)
src/: mf-main.c
src/common/: mf-callback.c  mf-detail.c  mf-download-app.c  mf-error.c  mf-file-util.c  mf-fm-svc-wrapper.c  mf-fs-monitor.c  mf-inotify-handle.c  mf-launch.c  mf-log.c  mf-media-content.c  mf-media-data.c  mf-storage-space.c  mf-ta.c  mf-ug-detail-fs.c  mf-ug-detail-media.c  mf-util.c
src/common/file-operation/: mf-cancel.c  mf-copy-internal.c  mf-copy.c  mf-delete-internal.c  mf-delete.c  mf-fo-internal.c  mf-move-internal.c  mf-move.c  mf-request.c  mf-search-internal.c  mf-search.c
src/common/file-system/: mf-file-attr.c  mf-fs-oper.c
src/media-db/: mf-media-db.c  mf-media.c
src/thumbnail/: mf-thumb-gen.c  mf-thumb-gen.h
src/widget/: mf-category-view.c  mf-context-popup.c  mf-detail-view.c  mf-edit-view.c  mf-focus-ui.c  mf-gengrid.c  mf-genlist.c  mf-navi-bar.c  mf-normal-view.c  mf-object-item.c  mf-object.c  mf-popup.c  mf-recent-view.c  mf-root-view.c  mf-search-bar.c  mf-search-view.c  mf-setting-view.c  mf-storage-view.c  mf-tray-item.c  mf-view.c
